--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "@angular/forms": "~12.0.0",
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
+    "@angular/platform-server": "~12.0.0",
     "@angular/router": "~12.0.0",
+    "@angular/service-worker": "~12.0.0",
+    "@zxing/library": "^0.18.6",
+    "@zxing/ngx-scanner": "^3.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
