--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-server": "~12.0.0",
     "@angular/router": "~12.0.0",
     "@angular/service-worker": "~12.0.0",
+    "@zxing/browser": "^0.0.9",
     "@zxing/library": "^0.18.6",
     "@zxing/ngx-scanner": "^3.2.0",
     "rxjs": "~6.6.0",
