--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,8 +41,8 @@ jobs:
           # branch on which the angular build will be deployed
           #deploy_branch: # optional, default is gh-pages
           # The folder in which `ng build` provides its output. This is the folder which will be deployed to the `deploy_branch`.
-          #angular_dist_build_folder: # optional, default is dist
+          angular_dist_build_folder: dist/browser # optional, default is dist
           # If the action should run 'ng lint'
-          #run_lint: # optional
+          run_lint: true # optional
           # Will not fail the step if anything fails
           #skip_failure: # optional
