--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@zxing/browser": "^0.0.9",
     "@zxing/library": "^0.18.6",
     "@zxing/ngx-scanner": "^3.2.0",
+    "angular2-qrcode": "^2.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
