Add scripts to get valuesets up-to-date

--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": ["crypto-js"],
             "outputPath": "dist/covid-certificate-pwa/browser",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -34,7 +35,9 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/crypto-js/crypto-js.js"
+            ],
             "serviceWorker": true,
             "ngswConfigPath": "ngsw-config.json"
           },
