--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "postinstall": "node ./ci/fetch-ehn-valuesets.js"
   },
   "private": true,
   "dependencies": {
@@ -24,6 +25,11 @@
     "@zxing/library": "^0.18.6",
     "@zxing/ngx-scanner": "^3.2.0",
     "angular2-qrcode": "^2.0.3",
+    "base45-ts": "^1.0.3",
+    "bignumber": "^1.1.0",
+    "cosette": "^0.6.1",
+    "crypto-js": "^4.0.0",
+    "get-github-code": "^1.0.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
