--- a/package.json
+++ b/package.json
@@ -21,15 +21,19 @@
     "@angular/platform-server": "~12.0.0",
     "@angular/router": "~12.0.0",
     "@angular/service-worker": "~12.0.0",
+    "@types/pako": "^1.0.1",
     "@zxing/browser": "^0.0.9",
     "@zxing/library": "^0.18.6",
     "@zxing/ngx-scanner": "^3.2.0",
     "angular2-qrcode": "^2.0.3",
     "base45-ts": "^1.0.3",
     "bignumber": "^1.1.0",
+    "cbor-js": "^0.1.0",
+    "cbor-redux": "^0.3.1",
     "cosette": "^0.6.1",
     "crypto-js": "^4.0.0",
     "get-github-code": "^1.0.4",
+    "pako": "^2.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
