--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cosette": "^0.6.1",
     "crypto-js": "^4.0.0",
     "get-github-code": "^1.0.4",
+    "glob": "^7.1.7",
     "pako": "^2.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
