--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.3.2
         with:
           # Github access token token used to deploy on gh_pages. You can find it on Github.
-          github_access_token: ${{ secrets.GH_KEY }}
+          github_access_token: ${{ secrets.GITHUB_TOKEN }}
           # The directory of the angular project, in which all the commands will run
           #angular_project_dir: # optional, default is ./
           # Build configuration for the angular app
@@ -54,7 +54,7 @@ jobs:
       - name: Publish release
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
-          repo_token: "${{ secrets.GH_KEY }}"
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
           prerelease: false
           title: "Release"
