--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,6 +61,7 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: ${{ steps.get_version.outputs.value }}
           name: ${{ steps.get_version.outputs.value }}
           files: |
             dist/covid-certifacate.tar.gz
